<resources>
    <string name="app_name">MiQat</string>
    <string name="play_services_error" translatable="false">Google Play Services must be installed</string>
    <string name="placeholder" translatable="false">Placeholder</string>
    <string name="geo_api_key" translatable="false">AIzaSyCUSRQAQCa5CmKPWe_VWdlArClGjQTXAZE</string>
    <string name="activity_title_location">Location</string>
    <string name="intro_definition">Mīqāt (Arabic: ميقات) ‎‎means a stated place or time to establish a religious ritual.</string>
    <string name="app_bar_title">You have</string>
    <string name="fajr">Fajr</string>
    <string name="shurouq">Shurouq</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha\'a</string>
    <string name="dawn">The dawn prayer</string>
    <string name="sunrise">Sunrise</string>
    <string name="noon">The noon prayer</string>
    <string name="afternoon">The afternoon prayer</string>
    <string name="sunset">The sunset prayer</string>
    <string name="night">The night prayer</string>
    <string name="next_prayer_subtitle_text_view">Till <b>%1$s</b></string>
    <string name="mosque_anchor" translatable="false">00000</string>
    <string name="action_location">Location</string>
    <string name="no_prayers_message">Can\'t connect to prayers server\nTouch to retry!</string>
    <string name="last_animated_key" translatable="false">lastAnimatedKey</string>
    <string name="action_add">Add</string>
    <string name="place_deletion_message">%1$s deleted!</string>
    <string name="schedule_title">Prayers</string>
    <string name="preferences_title_prayer_timings">Prayer Timings</string>
    <string name="preference_title_method">Method</string>
    <string name="preference_dialog_title_method">Pick method</string>
    <string name="preference_key_method" translatable="false">PreferenceKeyMethod</string>
    <string name="preference_summary_method">Method used to calculate prayer timings</string>
    <string name="preference_dialog_title_school">Pick school</string>
    <string name="preference_key_school" translatable="false">preferencesKeySchool</string>
    <string name="preference_summary_school">School according to which Asr timing is calculated</string>
    <string name="preference_title_school">School</string>
    <string name="preference_dialog_title_latitude">Pick method</string>
    <string name="preference_key_latitude" translatable="false">preferencesKeyLatitude</string>
    <string name="preference_summary_latitude">Method for adjusting times for higher latitudes</string>
    <string name="preference_title_latitude">Latitude adjustment method</string>
    <string name="preference_key_libraries" translatable="false">preferenceKeyLibraries</string>
    <string name="preferences_title_acknowledgement">Acknowledgements</string>
    <string name="action_settings">Settings</string>
    <string name="preference_default_method" translatable="false">5</string>
    <string name="preference_default_school" translatable="false">0</string>
    <string name="preference_default_latitude" translatable="false">3</string>
    <string name="add_location_message">Prayer timings are calculated using your geographical location, timezone,
        method and Islamic school. All of which can be changed anytime in settings.
        \n\nWith your privacy in mind, MiQat will never access your location, you can tap the location icon anytime to update your location</string>
    <string name="reverse_geo_error">Can\'t add location; system time is not set correctly</string>
    <string name="preference_title_libraries">Open source libraries</string>
    <string name="preference_key_api" translatable="false">preferenceKeyApi</string>
    <string name="preference_title_api">Al-Adhan API</string>
    <string name="about_api_url" translatable="false">http://aladhan.com/about</string>
    <string name="noun_subtitle">noun</string>
    <string name="sub_header_today">Today</string>
    <string name="sub_header_tomorrow">Tomorrow</string>
    <string name="action_add_location">ADD LOCATION</string>
    <string name="intro_example" translatable="false">إِنَّ الصَّلَاةَ كَانَتْ عَلَى الْمُؤْمِنِينَ كِتَابًا <b>مَّوْقُوتًا</b></string>
    <string name="intro_location_card_title">How MiQat works</string>
    <string name="preference_key_design" translatable="false">preferenceKeyDesign</string>
    <string name="preference_title_design">Mosque art by Starline - Freepik.com</string>
</resources>
